--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -300,6 +300,11 @@
                                                       Click="MenuProvider_Click"
                                                       Tag="qingbz"
                                                       GroupName="Provider" />
+                            <muxc:RadioMenuFlyoutItem Name="MenuProviderObzhi"
+                                                      x:Uid="MenuProviderObzhi"
+                                                      Click="MenuProvider_Click"
+                                                      Tag="obzhi"
+                                                      GroupName="Provider" />
                             <muxc:RadioMenuFlyoutItem Name="MenuProviderInfinity"
                                                       x:Uid="MenuProviderInfinity"
                                                       Click="MenuProvider_Click"
@@ -421,6 +426,24 @@
                                      Modifiers="None"
                                      Invoked="KeyInvoked" />
                 <KeyboardAccelerator Key="Escape"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Back"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Delete"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Home"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="End"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="PageUp"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="PageDown"
                                      Modifiers="None"
                                      Invoked="KeyInvoked" />
                 <KeyboardAccelerator Key="B"
