--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -106,17 +106,19 @@
             </AppBarButton>
             <AppBarButton Name="MenuFillOn"
                           x:Uid="MenuFillOn"
-                          Label=""
                           Visibility="Collapsed"
                           Click="MenuFill_Click">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="{StaticResource ResourceKey=FluentIcons}"
                               Glyph="&#xE740;" />
                 </AppBarButton.Icon>
+                <AppBarButton.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="Space"
+                                         Modifiers="None" />
+                </AppBarButton.KeyboardAccelerators>
             </AppBarButton>
             <AppBarButton Name="MenuFillOff"
                           x:Uid="MenuFillOff"
-                          Label=""
                           PointerEntered="MenuFillOff_PointerEntered"
                           Click="MenuFill_Click">
                 <AppBarButton.Icon>
@@ -129,6 +131,10 @@
                         </FontIcon.RenderTransform>
                     </FontIcon>
                 </AppBarButton.Icon>
+                <AppBarButton.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="Space"
+                                         Modifiers="None" />
+                </AppBarButton.KeyboardAccelerators>
             </AppBarButton>
             <AppBarButton Name="MenuSave"
                           x:Uid="MenuSave"
@@ -159,8 +165,8 @@
                     </FontIcon>
                 </AppBarButton.Icon>
                 <AppBarButton.KeyboardAccelerators>
-                    <KeyboardAccelerator Key="D"
-                                         Modifiers="Control" />
+                    <KeyboardAccelerator Key="Back"
+                                         Modifiers="None" />
                 </AppBarButton.KeyboardAccelerators>
             </AppBarButton>
             <AppBarButton Name="MenuSettings"
@@ -305,6 +311,11 @@
                                                       Click="MenuProvider_Click"
                                                       Tag="obzhi"
                                                       GroupName="Provider" />
+                            <muxc:RadioMenuFlyoutItem Name="MenuProviderWallhere"
+                                                      x:Uid="MenuProviderWallhere"
+                                                      Click="MenuProvider_Click"
+                                                      Tag="wallhere"
+                                                      GroupName="Provider" />
                             <muxc:RadioMenuFlyoutItem Name="MenuProviderInfinity"
                                                       x:Uid="MenuProviderInfinity"
                                                       Click="MenuProvider_Click"
@@ -437,6 +448,9 @@
                 <KeyboardAccelerator Key="Delete"
                                      Modifiers="None"
                                      Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Space"
+                                     Modifiers="None"
+                                     Invoked="KeyInvoked" />
                 <KeyboardAccelerator Key="Home"
                                      Modifiers="None"
                                      Invoked="KeyInvoked" />
@@ -477,6 +491,18 @@
                                      Modifiers="Control"
                                      Invoked="KeyInvoked" />
                 <KeyboardAccelerator Key="G"
+                                     Modifiers="Control"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Number1"
+                                     Modifiers="Control"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Number2"
+                                     Modifiers="Control"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Number3"
+                                     Modifiers="Control"
+                                     Invoked="KeyInvoked" />
+                <KeyboardAccelerator Key="Number4"
                                      Modifiers="Control"
                                      Invoked="KeyInvoked" />
             </RelativePanel.KeyboardAccelerators>
